--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,5 @@ project(Project1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project1
-<<<<<<< HEAD
-        main.cpp)
-=======
-        main.cpp cambridge.cpp cambridge.h)
->>>>>>> 4fcc178 (Initial commit)
+add_executable(Project1 main.cpp cambridge.h)
+
